[TASKMGR] Fix some multi-threaded drawing issues. Brought to you by Joachim Henze. CORE-9868

svn path=/trunk/; revision=68336